<resources>
    <string name="app_name">FlashFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--DICTIONARY-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Flash Food</string>
    <string name="user">Usuario</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="login">Entrar</string>
    <string name="signup">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="cpf">CPF</string>
    <string name="email">Email</string>
    <string name="reset_password">Redefinir Senha</string>
    <string name="type_code">Digite o Código</string>
    <string name="change">Alterar</string>
    <string name="type_new_password">Digite a Nova Senha</string>
    <string name="reenter_password">Confirme a Senha</string>
    <string name="send">Enviar</string>
    <string name="order_success">Seu pedido foi finalizado com sucesso!</string>
    <string name="order_finished">Dirija-se ao caixa com o codigo abaixo:</string>
    <string name="back_to_menu">Voltar ao inicio</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Pagamento</string>
    <string name="cash_or_vr">Dinheiro/VR</string>
    <string name="card">Cartão de Crédito</string>
    <string name="card_name">Nome impresso no cartão</string>
    <string name="card_number">Numero do cartão</string>
    <string name="cvv">CVV</string>
    <string name="card_date">Data de validade</string>
    <string name="finish">Finalizar pedido</string>
    <string name="profile">Meu Perfil</string>
    <string name="type_email_to_password">Digite o email para recuperar a senha:</string>
    <string name="search">Buscar</string>
    <string name="restaurants">Restaurantes</string>
    <string name="title_activity_restaurant_menu">RestaurantMenuActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_shop_cart">ShopCartActivity</string>
</resources>
