<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity">

<ImageView
    android:id="@+id/imageLogoPayment"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="32dp"
    android:src="@drawable/flash_food"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageButton
    android:id="@+id/buttonBackScreenCheckout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="75dp"
    android:background="#00FFFFFF"
    android:src="@drawable/ic_baseline_arrow_back_24"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/paymentText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:fontFamily="sans-serif-thin"
    android:text="@string/payment"
    android:textAlignment="center"
    android:textColor="#333333"
    android:textSize="24sp"
    android:textStyle="bold|italic"
    android:typeface="normal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageLogoPayment" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentText">

        <RadioButton
            android:id="@+id/cashRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="sans-serif"
            android:text="@string/cash_or_vr" />

        <RadioButton
            android:id="@+id/cardRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif"
            android:text="@string/card" />

    </RadioGroup>

    <EditText
        android:id="@+id/nameCardText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/card_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

<EditText
    android:id="@+id/numberCardTextNumber"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:ems="10"
    android:fontFamily="sans-serif-light"
    android:hint="@string/card_number"
    android:inputType="number"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nameCardText" />

<EditText
    android:id="@+id/cvvTextNumber"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:ems="10"
    android:fontFamily="sans-serif-light"
    android:hint="@string/cvv"
    android:inputType="number"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/numberCardTextNumber" />

<EditText
    android:id="@+id/expireDateTextNumber"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:ems="10"
    android:fontFamily="sans-serif-light"
    android:hint="@string/card_date"
    android:inputType="date"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/cvvTextNumber"
    app:layout_constraintTop_toBottomOf="@+id/numberCardTextNumber" />

<Button
    android:id="@+id/buttonSendPayment"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="32dp"
    android:background="#333333"
    android:backgroundTint="#333333"
    android:text="@string/finish"
    android:textColor="#FFFFFF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>